2017-08-21  Georg-Johann Lay  <avr@gjlay.de>

	PR target/79883
	* config/avr/avr.c (avr_set_current_function): Typo in diagnostic.

2017-08-21  Richard Sandiford  <richard.sandiford@linaro.org>

	* stor-layout.h (vector_type_mode): Move to...
	* tree.h (vector_type_mode): ...here.
	* stor-layout.c (vector_type_mode): Move to...
	* tree.c (vector_type_mode): ...here.  Include rtl.h and regs.h.

2017-08-21  Richard Biener  <rguenther@suse.de>

	* debug.h (struct gcc_debug_hooks): Add die_ref_for_decl and
	register_external_die hooks.
	(debug_false_tree_charstarstar_uhwistar): Declare.
	(debug_nothing_tree_charstar_uhwi): Likewise.
	* debug.c (do_nothing_debug_hooks): Adjust.
	(debug_false_tree_charstarstar_uhwistar): New do nothing.
	(debug_nothing_tree_charstar_uhwi): Likewise.
	* dbxout.c (dbx_debug_hooks): Adjust.
	(xcoff_debug_hooks): Likewise.
	* sdbout.c (sdb_debug_hooks): Likewise.
	* vmsdbgout.c (vmsdbg_debug_hooks): Likewise.
	* dwarf2out.c (macinfo_label_base): New global.
	(dwarf2out_register_external_die): New function for the
	register_external_die hook.
	(dwarf2out_die_ref_for_decl): Likewise for die_ref_for_decl.
	(dwarf2_debug_hooks): Use them.
	(dwarf2_lineno_debug_hooks): Adjust.
	(struct die_struct): Add with_offset flag.
	(DEBUG_LTO_DWO_INFO_SECTION, DEBUG_LTO_INFO_SECTION,
	DEBUG_LTO_DWO_ABBREV_SECTION, DEBUG_LTO_ABBREV_SECTION,
	DEBUG_LTO_DWO_MACINFO_SECTION, DEBUG_LTO_MACINFO_SECTION,
	DEBUG_LTO_DWO_MACRO_SECTION, DEBUG_LTO_MACRO_SECTION,
	DEBUG_LTO_LINE_SECTION, DEBUG_LTO_DWO_STR_OFFSETS_SECTION,
	DEBUG_LTO_STR_DWO_SECTION, DEBUG_STR_LTO_SECTION): New macros
	defining section names for the early LTO debug variants.
	(reset_indirect_string): New helper.
	(add_AT_external_die_ref): Helper for dwarf2out_register_external_die.
	(print_dw_val): Add support for offsetted symbol references.
	(get_ultimate_context): Split out from is_cxx.
	(is_cxx): Use get_ultimate_context.
	(is_fortran): Add decl overload.